--- a/src/vector/index.html
+++ b/src/vector/index.html
@@ -66,6 +66,7 @@
   >
     <noscript>Sorry, Element requires JavaScript to be enabled.</noscript> <!-- TODO: Translate this? -->
     <section id="matrixchat" style="height: 100%; overflow: auto;" class="notranslate"></section>
+    <div id="modal_root"></div>
     <script src="browser.js"></script>
     <script src="<%= htmlWebpackPlugin.files.js.find(entry => entry.includes("bundle.js")) %>"></script>
 
